--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,10 +1,10 @@
 // Mobile First Layout
 
-// Media, Colors
+// Media, Colors ...
 @import 'abstracts'
 
-// General, Fonts
+// General, Fonts ...
 @import 'base'
 
-// Buttons
+// Buttons, Lists ...
 @import 'components'
