--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,127 @@
+html {
+  box-sizing: border-box;
+}
+
 body {
-  width: 100vw;
-  height: 100vh;
+  min-width: 100vw;
+  min-height: 100vh;
   margin: 0 auto;
-  font-family: monospace;
   color: white;
   background-color: blue;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+}
+
+main {
+  margin: 10vh auto 0 auto;
+}
+
+html {
+  font-size: 62.5%;
+  font-family: monospace;
+}
+
+body {
+  font-size: 1.8rem;
+  line-height: 1.5;
 }
 
 h1 {
   text-align: center;
+  font-size: 4rem;
+  margin-bottom: 0.5rem;
+}
+
+h2 {
+  font-size: 2.4rem;
+  font-weight: normal;
+  margin-bottom: 0.25rem;
+}
+h2 a {
+  text-decoration: none;
 }
 
 a {
   color: white;
-  text-decoration: none;
   font-style: italic;
 }
-
 a:hover {
   font-weight: bold;
 }
 
+small {
+  font-size: 60%;
+}
+
+.spacer {
+  height: 8rem;
+}
+
+.icon-plus {
+  display: inline-flex;
+  align-items: center;
+  position: relative;
+  width: 1.6rem;
+  height: 1.6rem;
+}
+.icon-plus:before, .icon-plus:after {
+  content: "";
+  position: absolute;
+  height: 0.4rem;
+  width: 1.6rem;
+  background-color: white;
+  transition: all 0.8s ease-in-out;
+}
+.icon-plus:after {
+  transform: rotate(90deg);
+}
+
+.icon-square {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 1.6rem;
+  height: 1.6rem;
+}
+.icon-square:after {
+  content: "";
+  position: absolute;
+  height: 0.4rem;
+  width: 0.4rem;
+  background-color: white;
+}
+
 ul {
-  list-style-type: square;
+  margin-top: 0;
+  margin-bottom: 4rem;
+  list-style-type: none;
   list-style-position: inside;
+}
+ul .icon {
+  margin-right: 1.6rem;
+}
+ul:hover .icon-plus:after {
+  transform: rotate(0deg);
+}
+
+.list-centered {
+  margin: auto;
+  width: max-content;
+  padding: 0;
+}
+
+.list-expandable {
+  max-height: 3rem;
+  overflow: hidden;
+  transition: all 0.8s ease-in-out;
+}
+.list-expandable:hover {
+  max-height: 50rem;
 }
 
 li {
-  margin-top: 5px;
-}
-
-div {
-  margin: auto;
+  margin-bottom: 0.5rem;
 }
 
 /*# sourceMappingURL=style.css.map */
