--- a/sass/_components.sass
+++ b/sass/_components.sass
@@ -3,8 +3,8 @@
 	display: inline-flex
 	align-items: center
 	position: relative
-	width: 1.6rem
-	height: 1.6rem
+	width: 2rem
+	height: 2rem
 
 	&:before, &:after
 		content: ""
@@ -43,6 +43,10 @@ ul
 	.icon
 		margin-right: 1.6rem
 
+	img
+		height: 1.6rem
+		margin-right: 1.6rem
+
 	&:hover
 		.icon-plus:after
 			transform: rotate(0deg)
@@ -61,4 +65,6 @@ ul
 		max-height: 50rem
 
 li
+	display: flex
+	align-items: center
 	margin-bottom: 0.5rem
