--- a/sass/_components.sass
+++ b/sass/_components.sass
@@ -45,6 +45,7 @@ ul
 
 	img
 		height: 1.6rem
+		margin-top: .6rem
 		margin-right: 1.6rem
 
 	&:hover
@@ -66,5 +67,8 @@ ul
 
 li
 	display: flex
-	align-items: center
+	align-items: flex-start
 	margin-bottom: 0.5rem
+
+	div.icon
+		height: 2.8rem
